--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,7 +1,12 @@
 @use "../partials/mixins" as m;
-@use "../partials/neonBgColors";
-@use "../partials/neonBorderColors";
-@use "../partials/neonFontColors";
+@use "../partials/neonBlue";
+@use "../partials/neonGreen";
+@use "../partials/neonOrange";
+@use "../partials/neonPurple";
+@use "../partials/neonRed";
+@use "../partials/neonTeal";
+@use "../partials/neonWhite";
+@use "../partials/neonYellow";
 
 * {box-sizing: border-box; padding: 0; margin: 0;font-family:Arial, Helvetica, sans-serif}
 
@@ -17,17 +22,11 @@ html {
 
 body {
   height: 100%;
-  min-height: 500px;
   width: 100%;
-  background: black url("../public/assets/fakpAlloRes.png") no-repeat center fixed;
-  background-size: cover;
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
   align-items: center;
-  @include m.tablet-landscape {
-    background: black url("../public/assets/fakpFekvoRes.png") no-repeat center fixed;
-  }
 }
 
 li, a {
@@ -60,18 +59,6 @@ h2 {
   @include m.desktop {font-size: 1.5rem;}
 }
 
-.margTop1 {
-  margin-top: 1rem;
-}
-
-.margBott1 {
-  margin-bottom: 1rem;
-}
-
-.pad03 {
-  padding: 0.3rem;
-}
-
 main {
   width: 100vw;
   margin: 1rem 0;
@@ -84,13 +71,18 @@ main {
   @include m.desktop {width: 55%;}
 }
 
-.mySvg {
-  width: 5rem;
-  height: 5rem;
+.margTop1 {
+  margin-top: 1rem;
+}
 
-  image {
-    display: block;
-  }
+.margBott1 {
+  margin-bottom: 1rem;
+}
+
+.text1 {
+  font-size: 1rem;
+  padding: 0.5rem 0.3rem;
+  border-radius: 0.3rem;
 }
 
 [hidden] { display: none !important; }
