--- a/app/globals.scss
+++ b/app/globals.scss
@@ -42,6 +42,7 @@ h1, h2, h3 {
   @extend .bg-black;
   @extend .border-teal;
   @extend .color-teal;
+  margin-bottom: 2rem;
 }
 
 h1 {
@@ -79,10 +80,22 @@ main {
   margin-bottom: 1rem;
 }
 
-.text1 {
+.text0 {
   font-size: 1rem;
   padding: 0.5rem 0.3rem;
   border-radius: 0.3rem;
+}
+
+.text2 {
+  font-size: 1.2rem;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.3rem;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 [hidden] { display: none !important; }
