--- a/components/navigation/Header.scss
+++ b/components/navigation/Header.scss
@@ -4,6 +4,7 @@ header {
     flex-flow: column nowrap;
     align-items: center;
     justify-content: center;
+    margin-bottom: 1rem;
     
     #headLine {
         width: 100vw;
