--- a/app/globals.scss
+++ b/app/globals.scss
@@ -42,7 +42,7 @@ h1, h2, h3 {
   @extend .bg-black;
   @extend .border-teal;
   @extend .color-teal;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 h1 {
@@ -61,15 +61,15 @@ h2 {
 }
 
 main {
-  width: 100vw;
-  margin: 1rem 0;
+  width: 95vw;
+  margin-bottom: 1rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  @include m.tablet {width: 85%;}
-  @include m.tablet-landscape {width: 70%;}
-  @include m.desktop {width: 55%;}
+  @include m.tablet {width: 85vw;}
+  @include m.tablet-landscape {width: 70vw;}
+  @include m.desktop {width: 55vw;}
 }
 
 .margTop1 {
@@ -86,6 +86,12 @@ main {
   border-radius: 0.3rem;
 }
 
+.text1 {
+  font-size: 1.1rem;
+  padding: 0.5rem 0.5rem;
+  border-radius: 0.3rem;
+}
+
 .text2 {
   font-size: 1.2rem;
   padding: 0.5rem 0.5rem;
@@ -93,9 +99,26 @@ main {
 }
 
 .center {
-  display: flex;
   align-items: center;
   justify-content: center;
 }
+
+.right {
+  align-items: center;
+  justify-content: right;
+}
+
+.buttonCont {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 1rem;
+
+  * {
+      flex: 0 0 auto;
+  }
+}
+
+
 
 [hidden] { display: none !important; }
