almost there with auth

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -101,11 +101,13 @@ main {
 .center {
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .right {
   align-items: center;
   justify-content: right;
+  text-align: right;
 }
 
 .buttonCont {
