--- a/app/profile/page.scss
+++ b/app/profile/page.scss
@@ -1,4 +1,17 @@
-section {
-    display: block;
-    width: 100%;
+#formCont {
+   
+    form {
+        flex: 0 0 100%;
+        display: flex;
+        flex-flow: row wrap;
+
+        input, label {
+            display: block;
+            width: 100%;
+        }
+
+        input {
+            text-align: center;
+        }
+    }
 }
