--- a/components/navigation/Header.scss
+++ b/components/navigation/Header.scss
@@ -56,11 +56,9 @@ header {
             li {
                 flex: 1 1 auto;
 
-                a {
+                * {
                     display: block;
-                    font-size: 1.2rem;
-                    text-align: center;
-                    padding: 0.3rem;
+                    width: 100%;
                 }
             }
         }
