--- a/components/navigation/Footer.scss
+++ b/components/navigation/Footer.scss
@@ -1,4 +1,6 @@
-footer {
+@use "../../partials/mixins" as m;
+
+#mainFooter {
     width: 100vw;
     padding: 1rem;
     margin-top: auto;
@@ -7,9 +9,31 @@ footer {
     flex-flow: column;
     justify-content: center;
     align-items: center;
+
+    @include m.tablet {width: 90vw;}
+    @include m.tablet-landscape {width: 75vw;}
+    @include m.desktop {width: 60vw;}
+
   
-    div {
+    #github {
       flex: 1;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: center;
+      align-items: center;
+
+      div {
+        margin-left: 0.5rem;
+        flex: 0 0 auto;
+      }
+      
+      img {
+        position: relative;
+        object-fit: contain;
+        width: 2rem;
+        height: auto;
+      }
+      
     }
   }
   
