--- a/components/backgroundImage/backgroundImage.scss
+++ b/components/backgroundImage/backgroundImage.scss
@@ -1,4 +1,6 @@
 .imgCont {
+    display: flex;
+    justify-content: center;
     position: fixed;
     top: 0;
     bottom: 0;
@@ -8,13 +10,32 @@
     background-color: rgba($color: #000000, $alpha: 1);
     
     .layer {
-        background-color: rgba(0, 0, 0, 0.3);
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+    
+    .flicker {
+        animation: layer-change 10s infinite step-end;
+    }
+    
+    @keyframes layer-change {
+        0% {background-color: rgba(0, 0, 0, 0.3);}
+        90% {background-color: rgba(0, 0, 0, 0.3);}
+        91% {background-color: rgba(0, 0, 0, 0.0);}
+        92% {background-color: rgba(0, 0, 0, 0.3);}
+        93% {background-color: rgba(0, 0, 0, 0.0);}
+        94% {background-color: rgba(0, 0, 0, 0.3);}
+        100% {background-color: rgba(0, 0, 0, 0.3);}
+    }
 
+    img {
+        object-fit: cover;
+        height: 100%;
+        width: auto;
     }
 }
 
