--- a/components/navigation/NavUser.scss
+++ b/components/navigation/NavUser.scss
@@ -2,13 +2,14 @@
   position: absolute;
   right: 0;
   top: 0;
+  min-width: 6rem;
 
   &.open {
-      position: unset;
-      flex: 1 1 100%;
+    position: unset;
+    flex: 1 1 100%;
   }
 
   button {
-      width: 100%;
+    width: 100%;
   }
 }
