--- a/components/navigation/SocialMedia.scss
+++ b/components/navigation/SocialMedia.scss
@@ -4,6 +4,11 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
+  padding: 0.5rem;
+
+  &:hover {
+    background-color: dimgray;
+  }
 
   div {
     margin-left: 0.5rem;
