--- a/app/page.scss
+++ b/app/page.scss
@@ -1,7 +1,31 @@
-.cont {
-  display: flex;
+@use "../partials/mixins" as m;
 
-  p {
-    flex: 1;
+#mainSite {
+
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  
+  .introBlock {
+    flex: 0 0 100%;
+    @include m.tablet {flex: 0 0 50%;}
+    align-self: flex-end;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
   }
+
+  .introBlock p {
+    flex: 0 0 100%;
+  }
+
+  .introBlock img {
+    width: auto;
+    height: 8rem;
+    object-fit: contain;
+  }
+
 }
