--- a/app/about/page.scss
+++ b/app/about/page.scss
@@ -1,21 +1,20 @@
+@use "../../partials/mixins" as m;
+
 #oneletrajz {
-    .section {
-        width: 100%;
+
+    #profilkep {
         display: flex;
         flex-flow: row wrap;
-        user-select: none;
-        margin-top: 2rem;
-        
-        div {
-            width: 100%;
-            display: block;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 100%;
+        margin-bottom: 1rem;
+        @include m.tablet {flex: 0 0 50%;}
+    
+        img {
+            width: auto;
+            height: 18rem;
+            object-fit: contain;
         }
-        
-        #profilkep {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        
     }
 }
