--- a/app/page.scss
+++ b/app/page.scss
@@ -8,24 +8,22 @@
   align-items: center;
   
   .introBlock {
-    flex: 0 0 100%;
-    @include m.tablet {flex: 0 0 50%;}
-    align-self: flex-end;
-    margin-bottom: 2rem;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-  }
-
-  .introBlock p {
     flex: 0 0 100%;
-  }
+    margin-bottom: 1rem;
+    @include m.tablet {flex: 0 0 50%;}
 
-  .introBlock img {
-    width: auto;
-    height: 8rem;
-    object-fit: contain;
-  }
+    p {
+      flex: 0 0 100%;
+    }
 
+    img {
+      width: auto;
+      height: 8rem;
+      object-fit: contain;
+    }
+  }
 }
