--- a/app/projects/neonsnake/components/Controller.scss
+++ b/app/projects/neonsnake/components/Controller.scss
@@ -13,10 +13,11 @@
     }
 
     button {
-        background-color: rgba($color: #000000, $alpha: 0.2);
+        background-color: rgba($color: purple, $alpha: 0.3);
         color: rgba($color: white, $alpha: 0.7);
         font-size: 2rem;
         width: 3rem;
         height: 3rem;
+        border-radius: 1rem;
     }
 }
