Scoreboard in progress

--- a/app/projects/neonsnake/components/Table.scss
+++ b/app/projects/neonsnake/components/Table.scss
@@ -1,3 +1,9 @@
+#snakeGame {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+}
+
 #snakeTable {
     width: 100vw;
     max-width: 600px;
