--- a/components/Overlay.scss
+++ b/components/Overlay.scss
@@ -1,13 +1,14 @@
 .overlayCont {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     z-index: 20;
+    padding: 2rem;
     background-color: rgba($color: #000000, $alpha: .8);
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
