--- a/app/globals.scss
+++ b/app/globals.scss
@@ -140,7 +140,11 @@ main {
 }
 
 .flex1 {
-  flex: 1;
+  flex: 1 1 auto;
+}
+
+.hideOverflow {
+  overflow: hidden;
 }
 
 [hidden] { display: none !important; }
