--- a/app/myprojects/page.scss
+++ b/app/myprojects/page.scss
@@ -15,10 +15,11 @@
 
         width: 90%;
         padding: 1rem;
+        text-align: center;
         
         img {
-            width: 100%;
-            height: auto;
+            width: auto;
+            height: 20rem;
         }
     }
 
