--- a/app/myprojects/page.scss
+++ b/app/myprojects/page.scss
@@ -18,8 +18,8 @@
         text-align: center;
         
         img {
-            width: auto;
-            height: 20rem;
+            width: 100%;
+            height: auto;
         }
     }
 
