--- a/app/aboutme/page.scss
+++ b/app/aboutme/page.scss
@@ -3,18 +3,26 @@
 #oneletrajz {
 
     #profilkep {
+        flex: 0 0 auto;
+        align-self: flex-start;
         display: flex;
         flex-flow: row wrap;
         justify-content: center;
         align-items: center;
-        flex: 0 0 100%;
-        margin-bottom: 1rem;
-        @include m.tablet {flex: 0 0 50%;}
+        margin: 1rem;
+        border-radius: 2rem;
+        overflow: hidden;
     
         img {
             width: auto;
-            height: 18rem;
+            max-width: 100%;
+            height: 20rem;
             object-fit: contain;
         }
+    }
+
+    .textCont {
+        flex: 1;
+        min-width: 55%;
     }
 }
