--- a/app/myprojects/page.scss
+++ b/app/myprojects/page.scss
@@ -14,12 +14,14 @@
     .imageCont {
 
         width: 90%;
+        max-height: 20rem;
         padding: 1rem;
         text-align: center;
         
         img {
-            width: 100%;
-            height: auto;
+            width: auto;
+            max-width: 100%;
+            height: 100%;
         }
     }
 
