--- a/components/navigation/header/NavItem.scss
+++ b/components/navigation/header/NavItem.scss
@@ -1,7 +1,7 @@
-@use "../../partials/mixins" as m;
+@use "../../../partials/mixins" as m;
 
 .navCenter {
-                
+               
     &.open {
         flex: 1 1 100%;
     }
