finished contact me page and backend

--- a/app/authentication/components/AuthForm.scss
+++ b/app/authentication/components/AuthForm.scss
@@ -10,6 +10,10 @@
             width: 75%;
             text-align: center;
         }
+
+        .error {
+            flex: 0 0 100%;
+        }
     }
 
 }
