--- a/app/aboutme/page.scss
+++ b/app/aboutme/page.scss
@@ -1,8 +1,8 @@
 @use "../../partials/mixins" as m;
 
-#oneletrajz {
+#aboutMe {
 
-    #profilkep {
+    #profilePic {
         flex: 0 0 auto;
         align-self: flex-start;
         display: flex;
