--- a/components/navigation/header/Header.scss
+++ b/components/navigation/header/Header.scss
@@ -55,6 +55,7 @@
             justify-content: center;
             align-items: center;
             position: relative;
+            gap: 1rem;
         }
 
     }
