--- a/components/Overlay.scss
+++ b/components/Overlay.scss
@@ -9,6 +9,6 @@
     background-color: rgba($color: #000000, $alpha: .8);
     display: flex;
     flex-flow: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
