redirect on sign in

--- a/components/navigation/header/Header.scss
+++ b/components/navigation/header/Header.scss
@@ -51,10 +51,9 @@
         ul {
             width: 100%;
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: row nowrap;
             justify-content: center;
             align-items: center;
-            position: relative;
             gap: 1rem;
         }
 
