--- a/app/globals.scss
+++ b/app/globals.scss
@@ -51,7 +51,11 @@ label, input {
 }
 
 form {
-  max-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
 }
 
 textarea {
