--- a/components/forms/Forms.module.scss
+++ b/components/forms/Forms.module.scss
@@ -1,6 +1,6 @@
 .formSubmit {
     margin-top: 2rem;
-    max-width: 30rem;
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
