tweaked UI for snake game

--- a/app/myprojects/neonsnake/components/GameOver.scss
+++ b/app/myprojects/neonsnake/components/GameOver.scss
@@ -1,9 +1,7 @@
 #gameOverCont {
     display: flex;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
 
-    form {
-        width: 100%;
-    }
 }
