--- a/app/myprojects/neonsnake/components/Table.scss
+++ b/app/myprojects/neonsnake/components/Table.scss
@@ -18,24 +18,28 @@
         align-items: flex-start;
         width: 100%;
         height: 100%;
+        justify-content: center;
+        align-items: center;
     }
     
     #snakeTable {
-        flex: 1;
-        aspect-ratio: 1;
+        aspect-ratio: 1/1;
         width: 100%;
         height: auto;
-        max-height: 60vh;
-        max-width: 60vh;
+        max-height: 65%;
         display: flex;
         flex-flow: row wrap;
         
-        @include m.tablet-landscape {
-            width: 70%;
-            max-height: 90%;
-            max-width: none;
+        @include m.tablet {
+            height: 70%;
+            width: auto;
         }
 
+        @include m.tablet-landscape {
+            height: 100%;
+            width: auto;
+        }
+        
         .cells {
             height: 5%;
             width: 5%;
@@ -43,9 +47,8 @@
     }
 }
 
-
 #detailsCont{
-    flex: 0 0 100%;
+    padding: 1rem;
     @include m.tablet-landscape {
         max-width: 40%;
         flex: 1;
