--- a/app/myprojects/shadowrun-in-hungary/components/jellemzok/jellemzo/Jellemzo.module.scss
+++ b/app/myprojects/shadowrun-in-hungary/components/jellemzok/jellemzo/Jellemzo.module.scss
@@ -1,11 +1,7 @@
 .jellemzoCont {
-  width: 100%;
+  flex: 0 0 100%;
   display: flex;
   flex-flow: column nowrap;
   margin-bottom: 1rem;
 
-  div {
-    width: 100%;
-    min-height: 2rem;
-  }
 }
