--- a/partials/_neonWhite.scss
+++ b/partials/_neonWhite.scss
@@ -1,5 +1,6 @@
 .bg-grey {
-    background-color: rgba(150, 150, 150, 0.9);
+    background-color: rgba(200, 200, 200, 0.9);
+    font-weight: 500;
 }
 
 .bg-darkgrey {
