--- a/app/myprojects/shadowrun-in-hungary/components/jellemzok/jellemzo/Jellemzo.module.scss
+++ b/app/myprojects/shadowrun-in-hungary/components/jellemzok/jellemzo/Jellemzo.module.scss
@@ -1,7 +1,9 @@
 .jellemzoCont {
-  flex: 0 0 100%;
   display: flex;
   flex-flow: column nowrap;
-  margin-bottom: 1rem;
+}
 
+.selectedBorder {
+  border: 5px solid teal;
+  box-shadow: inset 0 0 10px lightseagreen;
 }
