--- a/app/myprojects/shadowrun-in-hungary/components/Jellemzok/Jellemzo/Jellemzo.module.scss
+++ b/app/myprojects/shadowrun-in-hungary/components/Jellemzok/Jellemzo/Jellemzo.module.scss
@@ -1,4 +1,6 @@
 .jellemzoCont {
+  position: relative;
+  width: 100%;
   display: flex;
   flex-flow: column nowrap;
 }
@@ -6,4 +8,10 @@
 .selectedBorder {
   border: 5px solid teal;
   box-shadow: inset 0 0 10px lightseagreen;
+}
+
+.edit {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
