more data restructure

--- a/app/myprojects/shadowrun-in-hungary/components/Tulajdonsagok/components/Tulajdonsag.module.scss
+++ b/app/myprojects/shadowrun-in-hungary/components/Tulajdonsagok/components/Tulajdonsag.module.scss
@@ -1,7 +1,7 @@
 .tulajdonsagCont {
     width: 100%;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
     justify-content: space-evenly;
 
     div {
