--- a/app/globals.scss
+++ b/app/globals.scss
@@ -111,18 +111,21 @@ main {
   font-size: 1rem;
   padding: 0.5rem 0.7rem;
   border-radius: 0.5rem;
+  min-height: 2rem;
 }
 
 .text1 {
   font-size: 1.1rem;
   padding: 0.5rem 0.7rem;
   border-radius: 0.5rem;
+  min-height: 2.2rem;
 }
 
 .text2 {
   font-size: 1.2rem;
   padding: 0.5rem 0.7rem;
   border-radius: 0.5rem;
+  min-height: 2.4rem;
 }
 
 .center {
