--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -17,12 +17,13 @@
     height: 100vh;
     padding: 0.5rem;
     z-index: 30;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
 }
 
 .closeButton {
     position: fixed;
     right: 0.5rem;
     top: 0.5rem;
-    font-size: 2rem;
-    padding: 0.5rem 0.7rem;
 }
