karakter save and retrieve works

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,4 +1,5 @@
 @use "../partials/mixins" as m;
+@use "../partials/flexItems";
 @use "../partials/neonBlue";
 @use "../partials/neonBrown";
 @use "../partials/neonGreen";
