--- a/app/globals.scss
+++ b/app/globals.scss
@@ -137,11 +137,13 @@ main {
 .buttonCont {
   width: 100%;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   gap: 1rem;
+  justify-content: center;
+  align-items: center;
 
   * {
-      flex: 0 0 auto;
+    flex: 0 0 auto;
   }
 }
 
