some adjustments in jellemzok and started eroforrasok

--- a/app/myprojects/shadowrun-in-hungary/karakterek/[karakterid]/components/Jellemzok/Jellemzo/Jellemzo.module.scss
+++ b/app/myprojects/shadowrun-in-hungary/karakterek/[karakterid]/components/Jellemzok/Jellemzo/Jellemzo.module.scss
@@ -1,8 +1,9 @@
 .jellemzoCont {
   position: relative;
-  width: 100%;
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: column wrap;
+  width: 100%;
+  max-width: 25rem;
 }
 
 .edit {
