--- a/partials/_neonWhite.scss
+++ b/partials/_neonWhite.scss
@@ -19,8 +19,8 @@
 }
 
 .color-white {
-    color: rgb(230, 230, 230);
-    text-shadow: 0 0 3px rgb(0, 0, 0), 0 0 5px rgb(0, 0, 0), 0 0 7px rgb(0, 0, 0);
+    color: rgba(255, 255, 255, 0.846);
+    text-shadow: 0 0 5px rgb(0, 0, 0), 0 0 7px rgb(0, 0, 0), 0 0 10px rgb(0, 0, 0);
 }
 
 .neonGrey {
