karakter creation update

--- a/app/myprojects/shadowrun-in-hungary/karakterek/[karakterid]/components/Jellemzok/Jellemzo/Jellemzo.module.scss
+++ b/app/myprojects/shadowrun-in-hungary/karakterek/[karakterid]/components/Jellemzok/Jellemzo/Jellemzo.module.scss
@@ -1,7 +1,7 @@
 .jellemzoCont {
   position: relative;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column nowrap;
   width: 100%;
 }
 
