--- a/app/globals.scss
+++ b/app/globals.scss
@@ -70,7 +70,7 @@ h1, h2, h3 {
   @extend .bg-black;
   @extend .border-teal;
   @extend .color-teal;
-  margin: 1rem 0;
+  margin-bottom:  1rem;
 }
 
 h1 {
