--- a/app/globals.scss
+++ b/app/globals.scss
@@ -139,7 +139,7 @@ main {
   display: flex;
   flex-flow: row wrap;
   gap: 1rem;
-  margin: 1rem 0;
+  padding: 1rem 0;
   justify-content: space-evenly;
   align-items: center;
 
