--- a/partials/_neonGreen.scss
+++ b/partials/_neonGreen.scss
@@ -1,16 +1,36 @@
-@use './neonWhite';
+@use './neonBlackAndWhite';
+@use './mixins' as m;
 
 .bg-green {
-  background-color: rgba(0, 220, 0, 0.9);
+  @include m.bg-color(
+    rgb(0, 220, 0)
+  );
+}
+
+.color-green {
+  @include m.text-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(0, 220, 0)
+  );
 }
 
 .border-green {
-  box-shadow: 0px 0px 10px rgba(0, 220, 0, 1) inset;
+  @include m.border-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(0, 220, 0)
+  );
 }
-  
-.color-green {
-  color: rgb(150, 255, 150);
-  text-shadow: 0 0 3px rgb(0, 220, 0), 0 0 5px white;
+
+.reverseGreen {
+  @extend .bg-green;
+  @include m.border-color(
+      rgb(0, 220, 0),
+      rgba(0, 0, 0, 0.9)
+  );
+  @include m.text-color(
+    rgba(255, 255, 255, 0.9),
+    rgba(0, 0, 0, 0.9)
+  );
 }
 
 .neonGreen {
@@ -21,16 +41,7 @@
    &.hover {
     cursor: pointer;
     &:hover {
-      @extend .bg-green;
-      @extend .border-white;
-      @extend .color-white;
+      @extend .reverseGreen;
     }
   }
 }
-
-.reverseGreen {
-  @extend .bg-green;
-  @extend .border-white;
-  @extend .color-white;
-}
-  
