--- a/partials/_neonBlue.scss
+++ b/partials/_neonBlue.scss
@@ -1,16 +1,36 @@
-@use './neonWhite';
+@use './mixins' as m;
+@use './neonBlackAndWhite';
 
 .bg-blue {
-  background-color: rgba(0, 150, 255, 0.9);
+  @include m.bg-color(
+    rgb(0, 0, 255)
+  );
+}
+
+.color-blue {
+  @include m.text-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(0, 0, 255)
+  );
 }
 
 .border-blue {
-  box-shadow: 0px 0px 10px rgba(0, 150, 255, 1) inset;
+  @include m.border-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(0, 0, 255)
+  );
 }
-  
-.color-blue {
-  color: rgb(150, 200, 255);
-  text-shadow: 0 0 3px rgb(0, 0, 255), 0 0 5px white;
+
+.reverseBlue {
+  @extend .bg-blue;
+  @include m.border-color(
+    rgb(0, 0, 255),
+    rgba(0, 0, 0, 0.9)
+  );
+    @include m.text-color(
+    rgba(255, 255, 255, 1),
+    rgba(0, 0, 0, 0.9)
+  );
 }
 
 .neonBlue {
@@ -21,16 +41,7 @@
    &.hover {
     cursor: pointer;
     &:hover {
-      @extend .bg-blue;
-      @extend .border-white;
-      @extend .color-white;
+      @extend .reverseBlue
     }
   }
 }
-
-.reverseBlue {
-  @extend .bg-blue;
-  @extend .border-white;
-  @extend .color-white;
-}
-  
