--- a/partials/_neonBrown.scss
+++ b/partials/_neonBrown.scss
@@ -1,16 +1,36 @@
-@use './neonWhite';
+@use './neonBlackAndWhite';
+@use './mixins' as m;
 
 .bg-brown {
-  background-color: rgb(140, 70, 20);
+  @include m.bg-color(
+    rgb(150, 75, 0)
+  );
+}
+
+.color-brown {
+  @include m.text-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(150, 75, 0)
+  );
 }
 
 .border-brown {
-  box-shadow: 0px 0px 10px rgba(140, 70, 20, 1) inset;
+  @include m.border-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(150, 75, 0)
+  );
 }
-  
-.color-brown {
-  color: rgb(140, 70, 20);
-  text-shadow: 0 0 3px rgb(59, 30, 9), 0 0 5px white;
+
+.reverseBrown {
+  @extend .bg-brown;
+  @include m.border-color(
+    rgb(150, 75, 0),
+    rgba(0, 0, 0, 0.9)
+  );
+  @include m.text-color(
+    rgba(255, 255, 255, 1),
+    rgba(0, 0, 0, 0.9)
+  );
 }
 
 .neonBrown {
@@ -21,16 +41,8 @@
    &.hover {
     cursor: pointer;
     &:hover {
-      @extend .bg-brown;
-      @extend .border-white;
-      @extend .color-white;
+      @extend .reverseBrown
     }
   }
 }
 
-.reverseBrown {
-  @extend .bg-brown;
-  @extend .border-white;
-  @extend .color-white;
-}
-  
