--- a/partials/_neonPurple.scss
+++ b/partials/_neonPurple.scss
@@ -1,36 +1,47 @@
-@use './neonWhite';
+@use './neonBlackAndWhite';
+@use './mixins' as m;
 
 .bg-purple {
-  background-color: rgba(255, 0, 255, 0.9);
+  @include m.bg-color(
+    rgb(200, 0, 255)
+  );
+}
+
+.color-purple {
+  @include m.text-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(200, 0, 255)
+  );
 }
 
 .border-purple {
-  box-shadow: 0px 0px 10px rgba(255, 0, 255, 1) inset;
+  @include m.border-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(200, 0, 255)
+  );
 }
-  
-.color-purple {
-  color: rgb(255, 150, 255);
-  text-shadow: 0 0 3px rgb(255, 0, 255), 0 0 5px white;
+
+.reversePurple {
+  @extend .bg-purple;
+  @include m.border-color(
+      rgb(200, 0, 255),
+      rgba(0, 0, 0, 0.9)
+  );
+  @include m.text-color(
+    rgba(255, 255, 255,1),
+    rgba(0, 0, 0, 0.9)
+  );
 }
 
 .neonPurple {
   @extend .bg-black;
   @extend .border-purple;
   @extend .color-purple;
-
-   &.hover {
+  
+  &.hover {
     cursor: pointer;
     &:hover {
-      @extend .bg-purple;
-      @extend .border-white;
-      @extend .color-white;
+      @extend .reversePurple;
     }
   }
 }
-
-.reversePurple {
-  @extend .bg-purple;
-  @extend .border-white;
-  @extend .color-white;
-}
-  
