--- a/partials/_neonTeal.scss
+++ b/partials/_neonTeal.scss
@@ -1,16 +1,36 @@
-@use './neonWhite';
+@use './neonBlackAndWhite';
+@use './mixins' as m;
 
 .bg-teal {
-  background-color: rgba(0, 230, 230, 0.9);
+  @include m.bg-color(
+    rgb(0, 255, 255)
+  );
+}
+
+.color-teal {
+  @include m.text-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(0, 255, 255)
+  );
 }
 
 .border-teal {
-  box-shadow: 0px 0px 10px rgba(0, 230, 230, 1) inset;
+  @include m.border-color(
+    rgba(255, 255, 255, 0.9),
+    rgb(0, 255, 255)
+  );
 }
-  
-.color-teal {
-  color: rgb(150, 255, 255);
-  text-shadow: 0 0 3px rgb(0, 230, 230), 0 0 5px white;
+
+.reverseTeal {
+  @extend .bg-teal;
+  @include m.border-color(
+    rgb(0, 255, 255),
+    rgba(0, 0, 0, 0.9)
+  );
+  @include m.text-color(
+    rgba(255, 255, 255, 1),
+    rgba(0, 0, 0, 0.9)
+  );
 }
 
 .neonTeal {
@@ -21,16 +41,7 @@
    &.hover {
     cursor: pointer;
     &:hover {
-      @extend .bg-teal;
-      @extend .border-white;
-      @extend .color-white;
+      @extend .reverseTeal;
     }
   }
 }
-
-.reverseTeal {
-  @extend .bg-teal;
-  @extend .border-white;
-  @extend .color-white;
-}
-  
